--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.221",
-    "react-scripts": "5.0.1",
     "serve": "^14.2.2",
     "tachyons": "^4.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.2"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
